--- a/demos/app/grid/sample.component.html
+++ b/demos/app/grid/sample.component.html
@@ -122,5 +122,5 @@
 
 </div>-->
 <igx-grid #grid1 [data]="localData" (onCellSelection)="selectCell($event)" [width]="'1200px'" [height]="'800px'">
-    <igx-column  *ngFor="let c of columns" [field]="c.field" [header]="c.field" [width]="c.width"></igx-column>
+    <igx-column  *ngFor="let c of columns" [field]="c.field" [header]="c.field" [width]="c.width" [fixed]='c.isFixed'></igx-column>
 </igx-grid>
