--- a/src/grid/row.component.html
+++ b/src/grid/row.component.html
@@ -1,3 +1,5 @@
-<ng-template igVirtFor let-col [igVirtForOf]="columns" [igVirtForUseForScroll]="grid.parentVirtDir" let-colIndex="index" [igVirtForScrolling]="'horizontal'">
+<igx-grid-cell *ngFor="let c of fixedColumns" [column]="c" [row]="this" [value]="rowData[c.field]" [cellTemplate]="c.bodyTemplate"></igx-grid-cell>
+
+<ng-template igVirtFor let-col [igVirtForOf]="unfixedColumns" [igVirtForUseForScroll]="grid.parentVirtDir" let-colIndex="index" [igVirtForScrolling]="'horizontal'">
     <igx-grid-cell [column]="col" [row]="this" [value]="rowData[col.field]" [cellTemplate]="col.bodyTemplate"></igx-grid-cell>
 </ng-template>
