--- a/src/themes/igniteui-angular.scss
+++ b/src/themes/igniteui-angular.scss
@@ -2,27 +2,33 @@
 @import 'material/manifest';
 @import 'themes/index';
 
-// // Generating a palette
+// Generating a palette
 $my-palette: igx-palette($primary: purple, $accent: cyan, $warn: orange);
 
+// Getting individual colors from a palette
+$my-color: igx-color($my-palette, 'primary', 300);
+$my-contrast: igx-contrast-color($my-palette, 'primary', 300);
+
+// @debug unquote("My Color:") $my-color, unquote("Contrast Text for 'My Color':") $my-contrast;
+
 // Overriding the default theme
-// @include igx-theme($my-palette, $exclude: ('igx-badge': true));
+@include igx-theme($my-palette, $exclude: ('igx-avatar': true, 'igx-badge': true));
 
-@include igx-theme($default-palette, $exclude: ('igx-badge': true));
+// Uncomment this if you want the default palette
+// @include igx-theme($default-palette);
 
+// Generating theme overrides for the avatar component
+$avatar-theme: igx-avatar-theme($background: red);
+
+// Overriding the default avatar styles
+@include igx-avatar($avatar-theme);
+
+// Generating theme overrides for the badge component
 $badge-theme: igx-badge-theme(
     $default-border-color: pink
 );
 
-@include igx-badge($badge-theme);
-
-// Generating a theme for the avatar component
-// $avatar-theme: igx-avatar-theme($background: red);
-
-// // Getting individual colors from a palette
-// $my-color: igx-color($my-palette, accent, 'A700');
-// $my-contrast: igx-contrast-color($my-palette, 'accent', 'A700');
-
-
-// Overriding the default avatar styles
-// @include igx-avatar($avatar-theme);
+// Overriding the default bage styles
+// we have to specify the custom palette we created
+// if we want to the modified bagde theme to use it
+@include igx-badge($badge-theme, $my-palette);
