There was still JS Blocks occurrences

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -3,7 +3,7 @@
         [(pin)]="drawerState.pin" [width]="drawerState.width" [position]="drawerState.position">
         <div class="ig-drawer-content">
             <nav class="nav">
-                <img class="logo" src="images/rsrcs/jsblocks-logo.svg" alt="Ignite UI JS Blocks Logo">
+                <img class="logo" src="images/rsrcs/jsblocks-logo.svg" alt="Ignite UI for Angular Logo">
 
                 <!--Components-->
                 <span class="nav-item header">Components</span>
