--- a/demos/app/styleguide/typography/sample.component.html
+++ b/demos/app/styleguide/typography/sample.component.html
@@ -3,7 +3,7 @@
     <section class="sample-content">
         <article class="sample-column">
             <h4 class="sample-title">Typeface</h4>
-            <p>Ignite UI JS Blocks uses <a href="https://fonts.google.com/specimen/Titillium+Web">Titillium Web</a> as the font
+            <p>Ignite UI for Angular uses <a href="https://fonts.google.com/specimen/Titillium+Web">Titillium Web</a> as the font
                 of choice. It is highly optimized for the web, legible, and pairs great with Google's own <a href="https://fonts.google.com/specimen/Roboto">Roboto</a>.</p>
         </article>
         <article class="sample-column">
