--- a/src/grid/grid.component.html
+++ b/src/grid/grid.component.html
@@ -22,14 +22,14 @@
 
 <div class="igx-grid__thead">
     <div class="igx-grid__tr" role="row">
-        <ng-template igVirtFor let-col [igVirtForOf]="visibleColumns" [igVirtForScrolling]="'horizontal'" [igVirtForUseForScroll]="parentVirtDir">
+        <ng-template igVirtFor let-col [igVirtForOf]="visibleColumns" [igVirtForScrolling]="'horizontal'" [igVirtForUseForScroll]="parentVirtDir" [igVirtForContainerSize]='width'>
             <igx-grid-header [gridID]="id" [column]="col"></igx-grid-header>
         </ng-template>
     </div>
 </div>
 
 <div class="igx-grid__tbody" [style.height]='height' [style.width]='width' >
-     <ng-template igVirtFor let-rowData [igVirtForOf]="data" let-rowIndex="index" [igVirtForScrolling]="'vertical'" #scrollContainer>
+     <ng-template igVirtFor let-rowData [igVirtForOf]="data" let-rowIndex="index" [igVirtForScrolling]="'vertical'" #scrollContainer [igVirtForContainerSize]='height'>
         <igx-grid-row [gridID]="id" [index]="rowIndex" [rowData]="rowData">
         </igx-grid-row>
      </ng-template>
