--- a/demos/app/grid/sample.component.html
+++ b/demos/app/grid/sample.component.html
@@ -121,6 +121,7 @@
     </div>
 
 </div>-->
-<igx-grid #grid1 [data]="localData" (onCellSelection)="selectCell($event)" [width]="'1200px'" [height]="'800px'">
+<igx-grid #grid1 [data]="localData" (onCellSelection)="selectCell($event)" [width]="'1200px'" [height]="'800px'" [fixingDirection]="'left'">
     <igx-column  *ngFor="let c of columns" [field]="c.field" [header]="c.field" [width]="c.width" [fixed]='c.isFixed'></igx-column>
 </igx-grid>
+<button (click)='toggleFixedState()'>Toggle fixed state of column</button>
